--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>Modele</title>
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat&family=Quattrocento:wght@700&display=swap" rel="stylesheet">
+        <title>Cheese & Wine</title>
     </head>
     <body>
         <div id="root"></div>
